Make it work on Windows

--- a/uberdoc.cfg
+++ b/uberdoc.cfg
@@ -25,7 +25,9 @@ input_ext = .md
 pandoc_cmd = pandoc
 
 # pandoc conversion options for html
-pandoc_options_html = -s --template=../templates/default.html
+pandoc_options_html = -s --template=..\templates/default.html
 
 # pandoc conversions options for pdf
-pandoc_options_pdf =  -s --template=../templates/default.tex --toc --number-sections -V geometry:"top=2cm, bottom=3cm, left=2.5cm, right=2cm"
+pandoc_options_pdf =  -s --template=../templates/default.tex --toc --number-sections -V "geometry:top=2cm, bottom=3cm, left=2.5cm, right=2cm"
+# on Windows this should look like
+# pandoc_options_pdf =  -s --template=..\templates/default.tex --toc --number-sections -V "geometry:top=2cm, bottom=3cm, left=2.5cm, right=2cm"
