changes to config parsing

--- a/doc/uberdoc.cfg
+++ b/doc/uberdoc.cfg
@@ -1,9 +1,9 @@
-[DEFAULT]
+[MAIN]
 
 doc_dir = .
 
 # dir for chapter content
-in_dir = in 
+in_dir = in
 
 # build output dir
 out_dir = out
@@ -35,4 +35,6 @@ pandoc_options_pdf =  -s --default-image-extension=pdf --template=../templates/d
 # pandoc_options_pdf =  -s --template=..\templates/default.tex --toc --number-sections -V "geometry:top=2cm, bottom=3cm, left=2.5cm, right=2cm"
 
 [USER]
+
+b=c
 
