--- a/tests/uberdoc_tests_user.cfg
+++ b/tests/uberdoc_tests_user.cfg
@@ -1,7 +1,9 @@
-[DEFAULT]
+[MAIN]
+
+data_dir = .
 
 # dir for chapter content
-in_dir = inin 
+in_dir = in
 
 # build output dir
 out_dir = out
@@ -31,3 +33,7 @@ pandoc_options_html = -s --default-image-extension=png --template=../templates/d
 pandoc_options_pdf =  -s --default-image-extension=pdf --template=../templates/default.tex --toc --number-sections -V "geometry:top=2cm, bottom=3cm, left=2.5cm, right=2cm"
 # on Windows this should look like
 # pandoc_options_pdf =  -s --template=..\templates/default.tex --toc --number-sections -V "geometry:top=2cm, bottom=3cm, left=2.5cm, right=2cm"
+
+[USER]
+user_option1 = user_option_value1
+user_option2 = user_option_value2
